app/eventyay/static/pretixcontrol/scss/_forms.scss
/* ... */
.tax-rules-formset {
  margin-left: -15px;
  margin-right: -15px;
}
.tax-rule-line {
  padding-top: 5px;
  margin: 0;
  & > div {
    padding-top: 5px;
    padding-bottom: 5px;
  }
}
.tax-rule-lines .tax-rule-line {
  border-bottom: 1px solid $input-border;
  padding-bottom: 5px;
}


.batch-select-label {
  display: block;
  width: 100%;
  height: 1.5em;
  cursor: pointer;
}

.bulk-edit-field-group {
  .field-toggle {
    font-weight: normal;
    display: inline-block;
    background: $gray-lighter;
    padding: 2px 8px 4px;
    border-top-left-radius: $border-radius-base;
    border-top-right-radius: $border-radius-base;
    margin-bottom: 0;
    input {
      position: relative;
      top: 2px;
    }
  }
  .field-content {
    border: 2px solid $gray-lighter;
    padding: 15px;
    opacity: 0.5;
    .datepickerfield::placeholder, .timepickerfield::placeholder {
      opacity: 0;
    }
    &.enabled {
      opacity: 1;
      .datepickerfield::placeholder, .timepickerfield::placeholder {
        opacity: 1;
      }
    }
  }
}

// Responsive styles for filter actions
@media (max-width: $screen-sm-max) {
  .filter-form .filter-actions {
    flex-direction: column;
    gap: 10px;
  }
}

